--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,33 +42,6 @@
 }
 
 /*=============== BASE ===============*/
-/* * {
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
-}
-
-body {
-	font-family: var(--body-font);
-	font-size: var(--normal-font-size);
-	font-weight: var(--font-medium);
-	background-color: var(--body-color);
-	color: var(--text-color);
-}
-
-ul {
-	list-style: none;
-}
-
-a {
-	text-decoration: none;
-}
-
-img {
-	display: block;
-	max-width: 100%;
-	height: auto;
-} */
 
 * {
 	box-sizing: border-box;
@@ -109,9 +82,92 @@ img {
 }
 
 /*=============== HEADER & NAV ===============*/
+.header {
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	background-color: var(--body-color);
+	z-index: var(--z-fixed);
+}
+
+.nav {
+	position: relative;
+	height: var(--header-height);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.nav__logo {
+	width: 36px;
+}
+
+.nav__toggle,
+.nav__close {
+	display: inline-flex;
+	font-size: 1.25rem;
+	color: var(--title-color);
+	cursor: pointer;
+}
 
 /* Navigation for mobile devices */
+@media screen and (max-width: 1023px) {
+	.nav__menu {
+		position: fixed;
+		top: 0;
+		left: 0;
+		background-color: var(--body-color);
+		width: 100%;
+		box-shadow: 0 1px 16px hsla(210, 55%, 24%, 0.1);
+		padding-block: 3.5rem 2rem;
+		display: flex;
+		flex-direction: column;
+		row-gap: 2.5rem;
+		transition: top 0.4s;
+	}
+}
 
+.nav__list {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	row-gap: 2rem;
+}
+
+.nav__link {
+	color: var(--title-color);
+	transition: color 0.3s;
+	&:hover {
+		color: var(--first-color);
+	}
+}
+
+.nav__buttons {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 0.75rem;
+}
+
+.nav__button-link,
+.nav__button-ghost {
+	display: inline-block;
+	color: var(--title-color);
+}
+
+.nav__button-ghost {
+	background-color: hsla(0, 0%, 100%, 0.3);
+	padding: 1rem 2.5rem;
+	border: 1px solid var(--title-color);
+	border-radius: 0.75rem;
+}
+
+.nav__close {
+	position: absolute;
+	top: 1.5rem;
+	right: 2rem;
+}
 /* Show menu */
 
 /* Change background header */
