--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ img {
 @media screen and (max-width: 1023px) {
 	.nav__menu {
 		position: fixed;
-		top: 0;
+		top: -100%;
 		left: 0;
 		background-color: var(--body-color);
 		width: 100%;
@@ -124,7 +124,7 @@ img {
 		display: flex;
 		flex-direction: column;
 		row-gap: 2.5rem;
-		transition: top 0.4s;
+		transition: top ease-in-out 0.7s;
 	}
 }
 
@@ -169,7 +169,9 @@ img {
 	right: 2rem;
 }
 /* Show menu */
-
+.show-menu {
+	top: 0;
+}
 /* Change background header */
 
 /*=============== HOME ===============*/
