--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,11 +249,37 @@ img {
 }
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
-
+@media screen and (max-width: 305px) {
+	.container {
+		margin-inline: 1rem;
+	}
+	.home__title {
+		font-size: 2rem;
+	}
+}
 /* For taller devices */
-
+@media screen and (min-width: 376px) and (min-height: 800px) {
+	.home__container {
+		padding-top: 10rem;
+	}
+	.home__images img {
+		width: 700px;
+		left: -12px;
+	}
+}
 /* For medium devices */
-
+@media screen and (min-width: 480px) {
+	.home__content {
+		max-width: 305px;
+	}
+	.home__bird-2 {
+		right: -3rem;
+	}
+	.home__images img {
+		width: initial;
+		left: 0;
+	}
+}
 /* For large devices */
 
 /* For 2K resolutions (2048 x 1152) */
